# internal/generated/api/api.gen.go
@@ -3,13 +3,46 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.6.0 DO NOT EDIT.
 package api
 
+import (
+	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 const (
 	BearerAuthScopes = "bearerAuth.Scopes"
 )
 
+// CreateHabitRequest defines model for CreateHabitRequest.
+type CreateHabitRequest struct {
+	DailyTarget float64 `json:"daily_target"`
+	ExpReward   int64   `json:"exp_reward"`
+	Name        string  `json:"name"`
+	Unit        string  `json:"unit"`
+}
+
+// CreateHabitResponse defines model for CreateHabitResponse.
+type CreateHabitResponse = HabitResponse
+
 // ErrorResponse defines model for ErrorResponse.
 type ErrorResponse struct {
 	Error string `json:"error"`
+}
+
+// HabitResponse defines model for HabitResponse.
+type HabitResponse struct {
+	ArchivedAt  *time.Time         `json:"archived_at,omitempty"`
+	CreatedAt   time.Time          `json:"created_at"`
+	DailyTarget float64            `json:"daily_target"`
+	ExpReward   int64              `json:"exp_reward"`
+	Id          openapi_types.UUID `json:"id"`
+	Name        string             `json:"name"`
+	Unit        string             `json:"unit"`
+}
+
+// ListHabitsResponse defines model for ListHabitsResponse.
+type ListHabitsResponse struct {
+	Habits []HabitResponse `json:"habits"`
 }
 
 // LoginRequest defines model for LoginRequest.
@@ -46,6 +79,14 @@ type TokenResponse struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
+// UpdateHabitRequest defines model for UpdateHabitRequest.
+type UpdateHabitRequest struct {
+	DailyTarget float64 `json:"daily_target"`
+	ExpReward   int64   `json:"exp_reward"`
+	Name        string  `json:"name"`
+	Unit        string  `json:"unit"`
+}
+
 // LoginJSONRequestBody defines body for Login for application/json ContentType.
 type LoginJSONRequestBody = LoginRequest
 
@@ -57,3 +98,9 @@ type RefreshJSONRequestBody = RefreshRequest
 
 // RegisterJSONRequestBody defines body for Register for application/json ContentType.
 type RegisterJSONRequestBody = RegisterRequest
+
+// CreateHabitJSONRequestBody defines body for CreateHabit for application/json ContentType.
+type CreateHabitJSONRequestBody = CreateHabitRequest
+
+// UpdateHabitJSONRequestBody defines body for UpdateHabit for application/json ContentType.
+type UpdateHabitJSONRequestBody = UpdateHabitRequest
